--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/comus3/wild_fire_detection#readme",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mqtt": "^5.10.1",
+    "socket.io": "^4.8.0"
   }
 }
